--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-file-reader": "^1.1.4",
+    "react-scripts": "3.0.1",
+    "read-file": "^0.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
