--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-file-reader": "^1.1.4",
     "react-scripts": "3.0.1",
     "read-file": "^0.2.0",
-    "typescript": "^3.4.5"
+    "typescript": "3.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
