--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-file-reader": "^1.1.4",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.3.1",
     "read-file": "^0.2.0",
     "typescript": "3.4.5"
   },
